# Golf-Ball-Defect-Detection

./: README.md  camera_id  dobot_pose.py  dobot_suctionmove.py  pc_client.py  pc_client2(final).py  pc_client2(final)_backup.py  rpi_server.py  suction.py
best/: data.pkl
best/.data/: serialization_id
best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  127  128  129  13  130  132  133  134  135  136  138  139  14  140  141  (+600 more)
dobot_realsense_calib/dobot_realsense_calib/: calib_compute.py
final/: dobot_suctionmove.py
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/dobot_realsense_calib/lib/dobot_realsense_calib/: calib_collect
install/dobot_realsense_calib/share/dobot_realsense_calib/: package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
record/: ros2_record_camera1.py
ros_ws/dobot_realsense_calib/: README.md  setup.cfg  setup.py
ros_ws/golf_ball_inspector/: setup.cfg  setup.py
ros_ws/golf_ball_inspector/golf_ball_inspector/: conveyor_node.py  socket_bridge_node.py
ros_ws/golf_ball_inspector/launch/: rpi_launch.py
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/dobot_realsense_calib/lib/dobot_realsense_calib/: pick_node
ros_ws/install/golf_ball_inspector/share/golf_ball_inspector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/golf_ball_inspector/share/golf_ball_inspector/launch/: pc_launch.py
ros_ws/log/: latest_build
(+7 files in other folders)
