<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>golf_ball_inspector</name>
  <version>0.1.0</version>
  <description>Golf ball defect detection and sorting system (Dobot + RealSense + YOLO + RPi)</description>
  <maintainer email="dlwlsdud0510@gmail.com">ssafy</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
